@@ -1,3 +1,7 @@
+2011-03-07  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avtreadfile.c (read_stream): fix reading empty files
+
 2011-03-06  Andreas K. Foerster  <info@akfoerster.de>
 
 	* doc/lua-akfavatar-reference.man: new file
